--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,5 +1,7 @@
 .header {
   // overflow: hidden;
+  padding: 30px 0;
+
   &_wrapper {
     position: relative;
     z-index: 9;
@@ -9,7 +11,7 @@
   .menu_items {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
 
     > li {
       > a {
@@ -25,14 +27,6 @@
         }
         &:hover,
         &.active {
-          &::after {
-            width: 100%;
-          }
-        }
-      }
-
-      &.active {
-        a {
           &::after {
             width: 100%;
           }
@@ -58,6 +52,7 @@
           padding: 50px 0;
 
           li {
+            line-height: 2;
             a {
               text-transform: uppercase;
             }
@@ -80,12 +75,40 @@
           }
         }
 
-        &:hover {
+        &.active {
+          & > a {
+            &::after {
+              content: "";
+              display: block;
+              width: 100%;
+              height: 2px;
+              background-color: $orange;
+              @include transition(0.5s);
+            }
+          }
           ul {
             opacity: 1;
             visibility: visible;
             transform: translateY(0);
           }
+        }
+      }
+
+      &.close_dropdown {
+        position: absolute;
+        top: 50%;
+
+        transform: translateY(-50%);
+        right: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        opacity: 0;
+        visibility: hidden;
+        font-size: 24px;
+
+        &.active {
+          opacity: 1;
+          visibility: visible;
         }
       }
     }
