--- a/assets/scss/_product.scss
+++ b/assets/scss/_product.scss
@@ -55,8 +55,8 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 6px;
-      margin-top: 15px;
+      gap: 10px;
+      margin-top: 20px;
 
       a,
       span {
@@ -70,7 +70,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        gap: 5px;
+        gap: 10px;
 
         a {
           &:not(:last-child) {
@@ -104,6 +104,18 @@
             color: $orange;
           }
         }
+      }
+    }
+  }
+}
+.product_list {
+  .product_item {
+    &_image {
+      height: 442px;
+
+      img {
+        height: 100%;
+        object-fit: cover;
       }
     }
   }
