--- a/assets/scss/_utility.scss
+++ b/assets/scss/_utility.scss
@@ -268,12 +268,12 @@ button {
 }
 
 .filter_box {
-  background-color: $bg_color;
-  min-width: 290px;
+  background-color: $white;
+  min-width: 350px;
   height: 640px;
-  padding: 30px;
+  padding: 30px 30px 30px 60px;
   position: absolute;
-  top: 30px;
+  top: 65px;
   right: 0;
   opacity: 0;
   visibility: hidden;
@@ -318,4 +318,8 @@ button {
     display: inline-block;
     margin-right: 8px;
   }
+}
+
+.mb-80 {
+  margin-bottom: 80px;
 }
