--- a/assets/scss/_utility.scss
+++ b/assets/scss/_utility.scss
@@ -20,8 +20,8 @@ html {
 }
 
 body {
-  //   font-family: "Nunito", sans-serif;
-  font-family: "Oswald", sans-serif;
+  font-family: "Nunito", sans-serif;
+  // font-family: "Oswald", sans-serif;
   // background-color: $bg_color;
 }
 
