--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -63,9 +63,10 @@
           transform: translateY(10%);
           @include transition(0.5s);
           display: flex;
-          justify-content: space-between;
+          justify-content: flex-start;
+          gap: 80px;
           align-items: flex-start;
-          padding: 50px 0;
+          padding: 50px 15px;
 
           li {
             margin-top: 25px;
@@ -290,7 +291,7 @@
 }
 
 .search_box {
-  background-color: $slightly_black;
+  background-color: $white;
   position: fixed;
   top: 0;
   left: 0;
@@ -314,13 +315,13 @@
       position: absolute;
       top: 30px;
       right: 50px;
-      color: $white;
+      color: $black_2;
       font-size: 30px;
       cursor: pointer;
     }
 
     form {
-      border-bottom: 1px solid $black;
+      border-bottom: 2px solid $black;
       width: 60%;
       display: flex;
       justify-content: space-between;
@@ -334,12 +335,12 @@
       button {
         background-color: transparent;
         border: none;
-        color: $white;
+        color: $black_2;
         font-size: 24px;
         font-weight: 300;
 
         &::placeholder {
-          color: $white;
+          color: $black_2;
           font-size: 24px;
           font-weight: 300;
         }
