--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -53,8 +53,8 @@
         position: initial;
         > ul {
           position: absolute;
-          left: 0;
-          right: 0;
+          left: -102px;
+          right: -102px;
           top: 100%;
           z-index: 999;
           background-color: $white;
@@ -66,7 +66,7 @@
           justify-content: flex-start;
           gap: 80px;
           align-items: flex-start;
-          padding: 50px 15px;
+          padding: 30px 100px;
 
           li {
             margin-top: 25px;
