--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -99,6 +99,7 @@
       &_content {
         position: absolute;
         top: 35%;
+        left: 5%;
         transform: translateY(-50%);
         width: 50%;
       }
