--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -11,4 +11,4 @@ $sub_heading: 15px;
 $bg_color: #d9d9d9;
 
 $font_family_1: "Nunito", sans-serif;
-$font_family_2: "Oswald", sans-serif; ;
+$font_family_2: "Nunito", sans-serif;
