--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -30,7 +30,9 @@
   li {
     line-height: 2;
   }
-
+  .newsletter {
+    margin-top: 45px;
+  }
   form {
     border-bottom: 1px solid $white;
     display: flex;
@@ -40,7 +42,7 @@
     button {
       border: none;
       background-color: transparent;
-      padding: 10px 20px;
+      padding: 0 0 10px 0;
       color: $white;
 
       &::placeholder {
@@ -48,6 +50,7 @@
         font-size: 12px;
         font-weight: 300;
         letter-spacing: 1px;
+        font-family: $font_family_1;
       }
     }
   }
