--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -228,7 +228,7 @@
 
 .cart {
   max-width: 450px;
-  padding: 30px 15px;
+  padding: 30px;
   background-color: $white;
   height: 100%;
   overflow-y: scroll;
@@ -251,10 +251,10 @@
     width: 3px;
   }
   &::-webkit-scrollbar-track {
-    background-color: $gray;
+    // background-color: $gray;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: $orange;
+    // background-color: $orange;
   }
   p {
     margin: 0;
@@ -322,6 +322,7 @@
       .sign_in {
         background-color: $orange;
         color: $white;
+        border-color: $orange;
       }
     }
     .payment_options {
